[gd_scene load_steps=5 format=3 uid="uid://da1pua6ast68x"]

[ext_resource type="Script" uid="uid://b5i46qgn2sd8r" path="res://Scenes/title_screen.gd" id="1_vmg2h"]
[ext_resource type="Theme" uid="uid://brxy2r70hypxg" path="res://titlescreentheme.tres" id="2_8l4an"]
[ext_resource type="Material" uid="uid://b0tejma582nok" path="res://Scenes/TransitionShader.tres" id="2_n15yj"]
[ext_resource type="Texture2D" uid="uid://ctv3m3bi4ah2m" path="res://Particles/PNG (Transparent)/gamelogo.png" id="4_n15yj"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmg2h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -250.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 576)
mouse_filter = 2
color = Color(1, 0.811771, 0.860018, 1)

[node name="ScreenTransition" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ScreenTransition"]
material = ExtResource("2_n15yj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -250.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 576)
mouse_filter = 2
color = Color(0.21, 0.0882, 0.13895, 1)

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.747
anchor_top = 0.265
anchor_right = 0.923
anchor_bottom = 0.374
offset_left = -386.544
offset_top = 218.28
offset_right = -389.296
offset_bottom = 197.648
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8l4an")
theme_override_font_sizes/font_size = 25
text = "Start"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.747
anchor_top = 0.42
anchor_right = 0.923
anchor_bottom = 0.529
offset_left = -386.544
offset_top = 180.84
offset_right = -389.296
offset_bottom = 160.208
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8l4an")
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.747
anchor_top = 0.574
anchor_right = 0.923
anchor_bottom = 0.683
offset_left = -386.544
offset_top = 144.048
offset_right = -389.296
offset_bottom = 123.416
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8l4an")
theme_override_font_sizes/font_size = 25
text = "Close"

[node name="Gamelogo" type="Sprite2D" parent="."]
position = Vector2(566, 197)
scale = Vector2(1.1, 1.1)
texture = ExtResource("4_n15yj")
